tests/Checker/everything/errors/12b.vc
void f() { return; }

int main() {
    f[0];
    return 1;
}
